[package]
name = "loopc"
version = "0.4.4"
authors = ["Alexander Koch <kochalexander@gmx.net>"]
keywords = ["loop", "compiler", "llvm"]
description = "A JIT compiler for the LOOP programming language"
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.5"
llvm-sys = "50"
libc = "0.2"
clap = "2.29"
